--- a/state.html
+++ b/state.html
@@ -84,7 +84,7 @@ body, html {
 <!-- Container (About Section) -->
 <div class="w3-content w3-co-padding-64" id="about">
   <h3 class="w3-center">How is your state doing?</h3>
-  <p class="w3-center">Please select the state and time period you want to find information about.</p>
+  <p class="w3-center">Please select the state period you want to find information about.</p>
   <div class="w3-row">
     <div class="w3-center">
 <div class="selectOption" id="selector">
